feat: 🎸 add dui notebooks

--- a/notebooks/2_2_traffic_accident_perpetrator_age_pl.ipynb
+++ b/notebooks/2_2_traffic_accident_perpetrator_age_pl.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Traffic incidents in Poland under the influence of alcohol (traffic accident perpetrator  driver age pl) 2016-2022\n"
+    "## Traffic traffic accident perpetrator - driver age pl 2016-2022\n"
    ]
   },
   {
