refactor: 💡 change dui topic  text

--- a/notebooks/2_0_dui_pl.ipynb
+++ b/notebooks/2_0_dui_pl.ipynb
@@ -18,10 +18,10 @@
     "id = 2\n",
     "topicName = 'driving-under-influence-pl'\n",
     "title = \"\"\"\n",
-    "Drunk driving offense and its traffic consequences vs. alcohol consumption in Poland.\n",
+    "Drunk driving offense, traffic consequences vs. alcohol consumption in Poland.\n",
     "\"\"\".replace('\\n',' ').strip()\n",
     "titlePl = \"\"\"\n",
-    "Przestępstwo jazdy pod wpływem alkoholu i jego skutki drogowe a spożycie alkoholu w Polsce.\n",
+    "Prowadzenie pojazdu w stanie nietrzeźwości, skutki drogowe a spożycie alkoholu w Polsce.\n",
     "\"\"\".replace('\\n',' ').strip()\n",
     "country = 'Poland'\n",
     "countryPl = 'Polska'\n",
@@ -38,7 +38,7 @@
     "State Agency for Solving Alcohol Problems.\n",
     "\"\"\".replace('\\n',' ').strip()\n",
     "descriptionPl=\"\"\"\n",
-    "Statystyki przestępstwa jazdy pod wpływem alkoholu \n",
+    "Statystyki przestępstwa prowadzenia pojazdu w stanie nietrzeźwości\n",
     "i skutki zdarzeń drogowych dokonanych pod wpływem alkoholu (Polska). \n",
     "Dane publikowane przez polską Komendę Główną Policji.\n",
     "Dodatkowo została umieszczona wizualizacja danych o średnim rocznym\n",
